Fixed ability to use g++
Created json file with a workspace path setting in cases that the g++ compiler is not found (psu accounts). Therefore, a user can install g++ and build the c++ code without admin privileges

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
         "tuple": "cpp"
+    },
+
+    "terminal.integrated.env.windows": {
+        "PATH": "C:/msys64/mingw64/bin"
     }
 }
